sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
var int i=0
^AlgCocktailSort1:3: error: expected class or object definition
var int j=0
^AlgCocktailSort1:4: error: expected class or object definition
def cocktailSort() {
^