sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
var int i=0
var int j=0
def cocktailSort() {
	for (i-<0 to getNombreValeurs-2) {
		if plusPetit(i+1,i) {echange(i+1,i)}
		}
		var faireechange:Boolean=false
	while(faitechange)
	{	
	  for (j-<getNombreVAleurs()-2 to 0 by -1)
	   {if plusPetit(j+1,j) {echange(j+1,j) faitechange=true}
	}
	
}
